# EpisodeID

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-17-episodeid-implementation.md
docs/superpowers/specs/: 2026-07-17-episodeid-design.md
episodeid/: __init__.py  __main__.py  cache_manager.py  config.py  coverage.py  deps.py  edge_cases.py  extractor.py  llm.py  matcher.py  metadata.py  models.py  pipeline.py  refsubs.py  renamer.py  session_log.py  splitter.py  textutil.py  tvmaze.py
episodeid/gui/: __init__.py  app.py  main_window.py  settings_dialog.py  styles.py  workers.py
packaging/: README.md  build_appimage.sh
scripts/: dry_run_scan.py
tests/: test_accuracy_boost.py  test_adaptive_window.py  test_coverage.py  test_escalate.py  test_extractor_text.py  test_free_slot_prior.py  test_global_unique.py  test_matcher.py  test_metadata.py  test_mkv_chapters.py  test_output_root.py  test_recursive_and_cache.py  test_renamer.py  test_season_path.py  test_sequential_disc.py  test_splitter.py  test_textutil.py
