[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "episodeid"
version = "1.0.0"
description = "Identify and rename TV episode files from subtitle dialogue (local-first)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "EpisodeID Contributors" }]
keywords = ["tv", "subtitles", "tmdb", "plex", "rename", "linux"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PySide6>=6.6",
    "rapidfuzz>=3.0",
    "requests>=2.28",
    "keyring>=24.0",
    "pysrt>=1.1",
    "Pillow>=10.0",
]

[project.optional-dependencies]
ocr = ["rapidocr-onnxruntime>=1.3"]
llm = ["google-genai>=1.0", "openai>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
episodeid = "episodeid.__main__:main"

[project.urls]
Homepage = "https://github.com/example/episodeid"
Documentation = "https://github.com/example/episodeid#readme"

[tool.setuptools.packages.find]
include = ["episodeid*"]

[tool.setuptools.package-data]
episodeid = ["gui/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
